# integration-uppies

./: .env-template  Dockerfile  README.md  pyproject.toml  requirements.txt
.nova/: Artwork  Configuration.json
app/process/: __init__.py  get.py
app/rabbits/: __init__.py  auth.py  listen.py  send.py
app/utils/monitoring/: __init__.py  logging.py  pyroscope.py  sentry.py
src/: main.py
src/data/: insert.py  update.py
src/utils/: auth.py  jump.py  metrics.py  process.py  watch.py
