[tool.poetry]
name = "module-uppies"
version = "0.1.0"
description = "Checks your uppies"
authors = ["Bentley Hensel <bentleyhensel@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
sentry-sdk = "^1.31.0"
pyroscope-io = "^0.8.5"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
